termino ejercicios practicos

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /guia4_BackEndWIthJava1/nbproject/private/
 /guia4_BackEndWIthJava1/build/
+/guia4_Ejercicios/nbproject/private/
+/guia4_Ejercicios/build/
