--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /guia4_BackEndWIthJava1/build/
 /guia4_Ejercicios/nbproject/private/
 /guia4_Ejercicios/build/
+/Guia5_BackEndWithJava1/nbproject/private/
+/Guia5_BackEndWithJava1/build/
