Arranco con POO

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /guia4_Ejercicios/build/
 /Guia5_BackEndWithJava1/nbproject/private/
 /Guia5_BackEndWithJava1/build/
+/guia7_BEWJ1_POO_TEORIAEJER/nbproject/private/
+/guia7_BEWJ1_POO_TEORIAEJER/build/
+/guia7_BEWJ1_POO_EJER1/nbproject/private/
+/guia7_BEWJ1_POO_EJER1/build/
