ultimos ejercicios POO

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@
 /guia7_BEWJ1_POO_TEORIAEJER/build/
 /guia7_BEWJ1_POO_EJER1/nbproject/private/
 /guia7_BEWJ1_POO_EJER1/build/
+/guia7_BEWJ1_POO_EJER2/nbproject/private/
+/guia7_BEWJ1_POO_EJER2/build/
+/guia7_BEWJ1_POO_EJER3/nbproject/private/
+/guia7_BEWJ1_POO_EJER3/build/
+/guia7_BEWJ1_POO_EJER4/nbproject/private/
+/guia7_BEWJ1_POO_EJER4/build/
