--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,18 @@
 /guia7_BEWJ1_POO_EJER3/build/
 /guia7_BEWJ1_POO_EJER4/nbproject/private/
 /guia7_BEWJ1_POO_EJER4/build/
+/Guia7_BEWJ1_POO_ejerX3/nbproject/private/
+/Guia7_BEWJ1_POO_ejerX3/build/
+/guia8_servicios_ejer1/nbproject/private/
+/guia8_servicios_ejer1/build/
+/Guia8_servicios_ejer2/nbproject/private/
+/Guia8_servicios_ejer2/build/
+/guia8_servicios_ejer3/nbproject/private/
+/guia8_servicios_ejer3/build/
+/guia9_utilidades_ejer1/nbproject/private/
+/guia9_utilidades_ejer1/build/
+/guia9_utilidades_ejer2/nbproject/private/
+/guia9_utilidades_ejer2/build/
+/guia9_utilidades_ejer2/dist/
+/guia9_utilidades_ejer3/nbproject/private/
+/guia9_utilidades_ejer3/build/
